--- a/src/GUI/CEOWindow/UI/Ui_CEOWindow.ui
+++ b/src/GUI/CEOWindow/UI/Ui_CEOWindow.ui
@@ -294,7 +294,7 @@ background:rgb(234, 234, 234)
 }</string>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="AllShop">
      <widget class="QLabel" name="allShop">
@@ -1594,9 +1594,9 @@ background:transparent;</string>
      <widget class="QWidget" name="widget" native="true">
       <property name="geometry">
        <rect>
-        <x>299</x>
+        <x>269</x>
         <y>70</y>
-        <width>541</width>
+        <width>571</width>
         <height>480</height>
        </rect>
       </property>
@@ -1639,9 +1639,9 @@ font-size:18px;
       <widget class="QTextEdit" name="contractContent">
        <property name="geometry">
         <rect>
-         <x>30</x>
+         <x>20</x>
          <y>70</y>
-         <width>480</width>
+         <width>531</width>
          <height>311</height>
         </rect>
        </property>
@@ -1649,8 +1649,8 @@ font-size:18px;
       <widget class="QLabel" name="label_26">
        <property name="geometry">
         <rect>
-         <x>30</x>
-         <y>450</y>
+         <x>390</x>
+         <y>390</y>
          <width>90</width>
          <height>20</height>
         </rect>
@@ -1662,8 +1662,8 @@ font-size:18px;
       <widget class="QLabel" name="label_27">
        <property name="geometry">
         <rect>
-         <x>30</x>
-         <y>420</y>
+         <x>180</x>
+         <y>390</y>
          <width>121</width>
          <height>20</height>
         </rect>
@@ -1688,10 +1688,10 @@ font-size:18px;
       <widget class="QLabel" name="label_29">
        <property name="geometry">
         <rect>
-         <x>300</x>
-         <y>390</y>
-         <width>91</width>
-         <height>16</height>
+         <x>30</x>
+         <y>420</y>
+         <width>90</width>
+         <height>20</height>
         </rect>
        </property>
        <property name="text">
@@ -1701,27 +1701,14 @@ font-size:18px;
       <widget class="QLabel" name="label_30">
        <property name="geometry">
         <rect>
-         <x>300</x>
+         <x>290</x>
          <y>420</y>
-         <width>91</width>
-         <height>16</height>
+         <width>90</width>
+         <height>20</height>
         </rect>
        </property>
        <property name="text">
         <string>确认签字：</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="processingConfirmation">
-       <property name="geometry">
-        <rect>
-         <x>410</x>
-         <y>450</y>
-         <width>75</width>
-         <height>23</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>确认操作</string>
        </property>
       </widget>
       <widget class="QLineEdit" name="shopNun">
@@ -1729,30 +1716,36 @@ font-size:18px;
         <rect>
          <x>100</x>
          <y>390</y>
-         <width>113</width>
+         <width>71</width>
          <height>20</height>
         </rect>
+       </property>
+       <property name="readOnly">
+        <bool>true</bool>
        </property>
       </widget>
       <widget class="QLineEdit" name="userTel">
        <property name="geometry">
         <rect>
-         <x>150</x>
-         <y>420</y>
-         <width>131</width>
+         <x>300</x>
+         <y>390</y>
+         <width>81</width>
          <height>20</height>
         </rect>
        </property>
        <property name="text">
         <string/>
        </property>
+       <property name="readOnly">
+        <bool>true</bool>
+       </property>
       </widget>
       <widget class="QCheckBox" name="contractConfirm">
        <property name="geometry">
         <rect>
-         <x>390</x>
-         <y>390</y>
-         <width>71</width>
+         <x>120</x>
+         <y>420</y>
+         <width>51</width>
          <height>20</height>
         </rect>
        </property>
@@ -1760,30 +1753,56 @@ font-size:18px;
         <string>确认</string>
        </property>
        <property name="checkable">
-        <bool>false</bool>
-       </property>
-      </widget>
-      <widget class="QCheckBox" name="ceoSignature">
-       <property name="geometry">
-        <rect>
-         <x>390</x>
-         <y>420</y>
-         <width>71</width>
-         <height>16</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>签字</string>
+        <bool>true</bool>
        </property>
       </widget>
       <widget class="QLineEdit" name="rentTime">
        <property name="geometry">
         <rect>
-         <x>120</x>
-         <y>450</y>
-         <width>113</width>
+         <x>480</x>
+         <y>390</y>
+         <width>71</width>
          <height>20</height>
         </rect>
+       </property>
+       <property name="readOnly">
+        <bool>true</bool>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="auditConfirmation">
+       <property name="geometry">
+        <rect>
+         <x>170</x>
+         <y>420</y>
+         <width>80</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>确认审核</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="ceoSignature">
+       <property name="geometry">
+        <rect>
+         <x>380</x>
+         <y>420</y>
+         <width>81</width>
+         <height>20</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="signatureConfirmation">
+       <property name="geometry">
+        <rect>
+         <x>470</x>
+         <y>420</y>
+         <width>80</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>签字确认</string>
        </property>
       </widget>
      </widget>
@@ -1792,7 +1811,7 @@ font-size:18px;
        <rect>
         <x>10</x>
         <y>70</y>
-        <width>261</width>
+        <width>251</width>
         <height>111</height>
        </rect>
       </property>
@@ -1874,7 +1893,7 @@ font-size:16px;
        <rect>
         <x>10</x>
         <y>200</y>
-        <width>261</width>
+        <width>251</width>
         <height>151</height>
        </rect>
       </property>
@@ -1895,7 +1914,7 @@ font-size:16px;
         </rect>
        </property>
        <property name="text">
-        <string>已审理合同</string>
+        <string>待签字合同</string>
        </property>
       </widget>
       <widget class="QLabel" name="label_32">
@@ -1908,7 +1927,7 @@ font-size:16px;
         </rect>
        </property>
        <property name="text">
-        <string>已审理数量：</string>
+        <string>待签数量：</string>
        </property>
       </widget>
       <widget class="QLabel" name="label_33">
@@ -1921,7 +1940,7 @@ font-size:16px;
         </rect>
        </property>
        <property name="text">
-        <string>已审合同：</string>
+        <string>待签合同：</string>
        </property>
       </widget>
       <widget class="QComboBox" name="quantityAudited">
